--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="contact flex items-center">
                     <img src="./icons/phone.svg" alt="">
                     <div>
-                        <h5>Call us: (+84) 123 456 789</h5>
-                        <h6>E-mail : support@freshmeal.com</h6>
+                        <h5>Call us: (+234) 706 6400 0040</h5>
+                        <h6>E-mail : foodietech@gmail.com</h6>
                     </div>
                 </div>
                 <div class="time flex items-center">
@@ -114,8 +114,8 @@
                             <div class="contact flex items-center">
                                 <img src="./icons/phone.svg" alt="">
                                 <div>
-                                    <h5>Call US: (+84) 123 456 789</h5>
-                                    <h6>E-mail : support@freshmeal.com</h6>
+                                    <h5>Call NIG: (+234) 706 640 0040</h5>
+                                    <h6>E-mail : foodietech@gmail.com</h6>
                                 </div>
                             </div>
                             <div class="branding">
@@ -495,13 +495,13 @@
                             <div>
                                 <ul>
                                     <li>
-                                        <a href="https://www.facebook.com/codersgyan">
+                                        <a href="https://www.facebook.com/foodietech_restaurant">
                                             <img src="./icons/facebook.svg" alt="">
                                             <span>Facebook</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://twitter.com/CoderGyan">
+                                        <a href="https://twitter.com/foodietech_restaurant">
                                             <img src="./icons/twitter.svg" alt="">
                                             <span>Twitter</span>
                                         </a>
@@ -513,7 +513,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.instagram.com/codersgyan/">
+                                        <a href="https://www.instagram.com/foodietech_restaurant/">
                                             <img src="./icons/instagram.svg" alt="">
                                             <span>Instagram</span>
                                         </a>
@@ -548,7 +548,7 @@
                 </footer>
                 <footer class="copyright">
                     <div>
-                        Copyright © 2020 .All rights reserved by <a href="https://www.instagram.com/codersgyan/">Coder's Gyan</a>.
+                        Copyright © 2020 .All rights reserved by <a href="https://www.instagram.com/foodietech_restaurant/">Coder's Foodietech</a>.
                     </div>
                 </footer>
             </div>
