--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img src="./icons/clock.svg" alt="">
                     <div>
                         <h5>Working Hours:</h5>
-                        <h6>Mon - Sat (8.00am - 12.00am)</h6>
+                        <h6>Mon - Sat (8.00am - 8.00pm)</h6>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                             <span class="divider">|</span>
                             <div>
                                 <img src="./icons/cart.svg" alt="">
-                                <a href="#">0 Items - ($0.00)</a>
+                                <a href="#">0 Items - (#0.00)</a>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <div class="contact flex items-center">
                                 <img src="./icons/phone.svg" alt="">
                                 <div>
-                                    <h5>Call NIG: (+234) 706 640 0040</h5>
+                                    <h5>Call: (+234) 706 640 0040</h5>
                                     <h6>E-mail : foodietech@gmail.com</h6>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                                 <img src="./icons/clock.svg" alt="">
                                 <div>
                                     <h5>Working Hours:</h5>
-                                    <h6>Mon - Sat (8.00am - 12.00am)</h6>
+                                    <h6>Mon - Sat (8.00am - 8.00pm)</h6>
                                 </div>
                             </div>
                         </div>
