--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
                 <header class="hero flex items-center">
                     <div class="container">
                         <div class="welcome flex items-center">
-                            <span>Welcome to</span>
-                            <img src="./icons/foodietech logo.png" alt="">
+                            <span>Welcome to Foodietech</span>
                         </div>
                         <h1>The World Best <span>Shoping</span> Website</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
