--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                             <div class="branding">
-                                <img src="./icons/foodietech logo.png" alt="">
+                               <img src="./icons/logo.svg" alt="">
                             </div>
                             <div class="time flex items-center">
                                 <img src="./icons/clock.svg" alt="">
@@ -148,6 +148,7 @@
                     <div class="container">
                         <div class="welcome flex items-center">
                             <span>Welcome to Foodietech</span>
+                            <img src="./icons/logo-2.svg" alt="">
                         </div>
                         <h1>The World Best <span>Shoping</span> Website</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
