--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-wrapper">
         <div class="nav-background">
             <div class="mobile-logo">
-                <img src="./icons/foodietech logo.png" alt="">
+                <img src="./icons/Foodietech Logo.svg" alt="">
             </div>
             <div class="mobile-nav">
                 <div class="cart">
