--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-wrapper">
         <div class="nav-background">
             <div class="mobile-logo">
-                <img src="./icons/Foodietech Logo.svg" alt="">
+                <img src="./icons/logo.svg" alt="">
             </div>
             <div class="mobile-nav">
                 <div class="cart">
@@ -150,16 +150,16 @@
                             <span>Welcome to Foodietech</span>
                             <img src="./icons/logo-2.svg" alt="">
                         </div>
-                        <h1>The World Best <span>Shoping</span> Website</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the
-                            industry's standard dummy.</p>
+                        <h1>The World Best <span>Restaurant</span> Website</h1>
+                        <p>Foodietech is a choice online restaurant for any tech expert. We are here
+                            to bring the best
+                            delicious me for all tech experts.</p>
                         <div>
                             <button class="btn btn-primary">Read More</button>
                             <button class="btn btn-secondary">Shop Now</button>
                         </div>
                         <div class="hero-image">
-                            <img src="./images/straw.png" alt="">
+                            <img src="./images/Chapman_drink.png" alt="">
                         </div>
                     </div>
                 </header>
