--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="cart">
                     <div class="flex items-center">
                         <img src="./icons/cart-dark.svg" alt="">
-                        <a href="#">0 Items - (#0.00)</a>
+                        <a href="#">0 Items - ($0.00)</a>
                     </div>
                 </div>
                 <div class="nav-top">
@@ -102,7 +102,7 @@
                             <span class="divider">|</span>
                             <div>
                                 <img src="./icons/cart.svg" alt="">
-                                <a href="#">0 Items - (#0.00)</a>
+                                <a href="#">0 Items - ($0.00)</a>
                             </div>
                         </div>
                     </div>
@@ -152,8 +152,8 @@
                         </div>
                         <h1>The World Best <span>Restaurant</span> Website</h1>
                         <p>Foodietech is a choice online restaurant for any tech expert. We are here
-                            to bring the best
-                            delicious me for all tech experts.</p>
+                            to deliver the best
+                            delicious meal to all tech experts.</p>
                         <div>
                             <button class="btn btn-primary">Read More</button>
                             <button class="btn btn-secondary">Shop Now</button>
@@ -177,7 +177,7 @@
                                     </div>
                                     <hr>
                                     <div>
-                                        <h2 class="text-center">Summer Salad</h2>
+                                        <h2 class="text-center">Jollof rice, plantain & chicken</h2>
                                         <div class="stars flex justify-center items-center">
                                             <img src="./icons/start-filled.svg" alt="">
                                             <img src="./icons/start-filled.svg" alt="">
@@ -186,7 +186,7 @@
                                             <img src="./icons/star-grey.svg" alt="">
                                         </div>
                                         <div class="price text-center">
-                                            $ 1.25
+                                            $ 3.99
                                         </div>
                                         <div class="flex justify-center">
                                             <button>
@@ -202,7 +202,7 @@
                                     </div>
                                     <hr>
                                     <div>
-                                        <h2 class="text-center">Russian Salad</h2>
+                                        <h2 class="text-center">Yam & Egg</h2>
                                         <div class="stars flex justify-center items-center">
                                             <img src="./icons/start-filled.svg" alt="">
                                             <img src="./icons/start-filled.svg" alt="">
@@ -211,7 +211,7 @@
                                             <img src="./icons/star-grey.svg" alt="">
                                         </div>
                                         <div class="price text-center">
-                                            $ 1.25
+                                            $ 2.99
                                         </div>
                                         <div class="flex justify-center">
                                             <button>
@@ -227,7 +227,7 @@
                                     </div>
                                     <hr>
                                     <div>
-                                        <h2 class="text-center">Greek Salad</h2>
+                                        <h2 class="text-center">Beans & Plantain</h2>
                                         <div class="stars flex justify-center items-center">
                                             <img src="./icons/start-filled.svg" alt="">
                                             <img src="./icons/start-filled.svg" alt="">
@@ -236,7 +236,7 @@
                                             <img src="./icons/star-grey.svg" alt="">
                                         </div>
                                         <div class="price text-center">
-                                            $ 1.25
+                                            $ 2.99
                                         </div>
                                         <div class="flex justify-center">
                                             <button>
@@ -248,11 +248,11 @@
                                 </div>
                                 <div class="food-card magic-shadow-sm">
                                     <div class="product-image flex items-center justify-center">
-                                        <img src="./images/plate-3.png" alt="">
+                                        <img src="./images/plate-4.png" alt="">
                                     </div>
                                     <hr>
                                     <div>
-                                        <h2 class="text-center">Cottage pie</h2>
+                                        <h2 class="text-center">Burger</h2>
                                         <div class="stars flex justify-center items-center">
                                             <img src="./icons/start-filled.svg" alt="">
                                             <img src="./icons/start-filled.svg" alt="">
@@ -261,7 +261,7 @@
                                             <img src="./icons/star-grey.svg" alt="">
                                         </div>
                                         <div class="price text-center">
-                                            $ 1.25
+                                            $ 1.99
                                         </div>
                                         <div class="flex justify-center">
                                             <button>
@@ -280,20 +280,20 @@
                 </section>
                 <section class="about-meal">
                     <div class="container">
-                        <h1 class="section-heading">About Fresh Meal</h1>
+                        <h1 class="section-heading">About Foodietech</h1>
                         <div class="about-meal-wrap flex">
                             <div class="flex-1">
                                 <img src="./images/yogurt.png" alt="">
                             </div>
                             <div class="flex-1">
-                                <h2>Freshmeal is a long established fact that a reader will be distracted</h2>
-                                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                                    piece of
-                                    classical Latin literature from 45 BC, making it over 2000 years old. Richard
-                                    McClintock, a
-                                    Latin professor at Hampden Sydney College in Virginia, The standard chunk of Lorem
-                                    Ipsum used
-                                    since the 1500s is reproduced below for those interested.</p>
+                                <h2>Freshmeal is a newly established food restaurant meant to satisfy the belly </h2>
+                                <p>of those that love food while working. We are always available to deliver the food of
+                                    your choice
+                                    in respective of the distance. We have branches and enough staffs on guard to satisfy
+                                    your belly
+                                    in no time. Our head office is in Ikoyi, Lagos Nigeria. The is a one man idea and business
+                                    that started
+                                    off early 2024, our review and feedback so far have been excellent.</p>
                                 <button class="btn btn-secondary">Read More</button>
                             </div>
                         </div>
@@ -306,19 +306,19 @@
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/transport.svg" alt="">
                                 <h2>Free Home delivery</h2>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <p>We have our logistic team ready for food delivery.</p>
                                 <button class="btn btn-secondary">Read More</button>
                             </div>
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/bag.svg" alt="">
-                                <h2 class="text-primary">30 Days ReturnServices</h2>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <h2 class="text-primary">24 hours ReturnServices</h2>
+                                <p>No return policy once food is delivered in good condition.</p>
                                 <button class="btn btn-primary">Read More</button>
                             </div>
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/usd.svg" alt="">
                                 <h2>Money Back Guaranted</h2>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <p>Lorem We confirm and provide refund within the specific period.</p>
                                 <button class="btn btn-secondary">Read More</button>
                             </div>
                         </div>
@@ -329,19 +329,19 @@
                         <h1 class="section-heading text-pure">Big Deals of the Week</h1>
                         <div class="timer">
                             <div>
-                                <span>02</span>
+                                <span>05</span>
                                 <span>Days</span>
                             </div>
                             <div>
-                                <span>24</span>
+                                <span>10</span>
                                 <span>Hours</span>
                             </div>
                             <div>
-                                <span>55</span>
+                                <span>60</span>
                                 <span>Minutes</span>
                             </div>
                             <div>
-                                <span>58</span>
+                                <span>42</span>
                                 <span>Seconds</span>
                             </div>
                         </div>
