--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <h1 class="section-heading">About Foodietech</h1>
                         <div class="about-meal-wrap flex">
                             <div class="flex-1">
-                                <img src="./images/yogurt.png" alt="">
+                                <img src="./images/logo 2.png" alt="">
                             </div>
                             <div class="flex-1">
                                 <h2>Freshmeal is a newly established food restaurant meant to satisfy the belly </h2>
@@ -305,20 +305,20 @@
                         <div class="card-wrapper flex">
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/transport.svg" alt="">
-                                <h2>Free Home delivery</h2>
+                                <h2>Home delivery service</h2>
                                 <p>We have our logistic team ready for food delivery.</p>
                                 <button class="btn btn-secondary">Read More</button>
                             </div>
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/bag.svg" alt="">
-                                <h2 class="text-primary">24 hours ReturnServices</h2>
+                                <h2 class="text-primary">24 hours Return Services Policy</h2>
                                 <p>No return policy once food is delivered in good condition.</p>
                                 <button class="btn btn-primary">Read More</button>
                             </div>
                             <div class="service-card magic-shadow-sm">
                                 <img class="icon" src="./icons/usd.svg" alt="">
                                 <h2>Money Back Guaranted</h2>
-                                <p>Lorem We confirm and provide refund within the specific period.</p>
+                                <p>We confirm and provide refund within the specific period.</p>
                                 <button class="btn btn-secondary">Read More</button>
                             </div>
                         </div>
@@ -354,11 +354,11 @@
                         <div class="article-wrapper">
                             <article class="card magic-shadow-sm">
                                 <div>
-                                    <img src="./images/coffee.jpg" alt="">
+                                    <img src="./images/Tea.jpg" alt="">
                                 </div>
                                 <div class="card-content">
                                     <div class="post-meta flex items-center justify-between">
-                                        <span>July 03, 2017</span>
+                                        <span>July 03, 2024</span>
                                         <div>
                                             <span>Posted by <strong>FreshMeal</strong></span>
                                             <span class="comment-count">12 Comments</span>
