--- a/index.html
+++ b/index.html
@@ -358,40 +358,39 @@
                                 </div>
                                 <div class="card-content">
                                     <div class="post-meta flex items-center justify-between">
-                                        <span>July 03, 2024</span>
+                                        <span>June 22, 2024</span>
                                         <div>
-                                            <span>Posted by <strong>FreshMeal</strong></span>
-                                            <span class="comment-count">12 Comments</span>
+                                            <span>Posted by <strong>Foodietech</strong></span>
+                                            <span class="comment-count">15 Comments</span>
                                         </div>
                                     </div>
 
-                                    <h2>Lorem Ipsum is simply dummy text of the printing</h2>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a
-                                        page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                        more
-                                        letters.</p>
+                                    <h2>The importance of Tea </h2>
+                                    <p>Tea, especially green tea, is rich in antioxidants like catechins, which help in reducing 
+                                        the risk of chronic diseases.
+                                        Regular consumption of tea is associated with improved heart health, 
+                                        including lower cholesterol levels and reduced risk of heart disease
+                                        Tea contributes to daily fluid intake, helping maintain hydration.</p>
                                 </div>
                             </article>
                             <article class="card magic-shadow-sm">
                                 <div>
-                                    <img src="./images/donut.jpg" alt="">
+                                    <img src="./images/Spaghetti Meal.jpg" alt="">
                                 </div>
                                 <div class="card-content">
                                     <div class="post-meta flex items-center justify-between">
-                                        <span>July 03, 2017</span>
+                                        <span>June 22, 2024</span>
                                         <div>
-                                            <span>Posted by <strong>FreshMeal</strong></span>
+                                            <span>Posted by <strong>Foodietech</strong></span>
                                             <span class="comment-count">12 Comments</span>
                                         </div>
                                     </div>
 
-                                    <h2>Lorem Ipsum is simply dummy text of the printing</h2>
-                                    <p>It is a long established fact that a reader will be distracted by the readable
-                                        content of a
-                                        page when looking at its layout. The point of using Lorem Ipsum is that it has a
-                                        more
-                                        letters.</p>
+                                    <h2>The importance of good food in the body</h2>
+                                    <p>good food is foundational to the body's health and functionality. 
+                                        It not only supports immediate physiological needs but also contributes to long-term health and well-being. 
+                                        Eating a balanced diet rich in a variety of nutrients is essential for maintaining physical, 
+                                        mental, and emotional health.</p>
                                 </div>
                             </article>
                         </div>
