--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
                     <div class="container">
                         <div class="welcome flex items-center">
                             <span>Welcome to Foodietech</span>
-                            <img src="./icons/logo-2.svg" alt="">
                         </div>
-                        <h1>The World Best <span>Restaurant</span> Website</h1>
+                        <h1>The Best Tech <span>Restaurant</span> Website</h1>
                         <p>Foodietech is a choice online restaurant for any tech expert. We are here
                             to deliver the best
                             delicious meal to all tech experts.</p>
@@ -366,7 +365,7 @@
                                     </div>
 
                                     <h2>The importance of Tea </h2>
-                                    <p>Tea, especially green tea, is rich in antioxidants like catechins, which help in reducing 
+                                    <p>Green tea especially, is rich in antioxidants like catechins, which help in reducing 
                                         the risk of chronic diseases.
                                         Regular consumption of tea is associated with improved heart health, 
                                         including lower cholesterol levels and reduced risk of heart disease
@@ -387,8 +386,8 @@
                                     </div>
 
                                     <h2>The importance of good food in the body</h2>
-                                    <p>good food is foundational to the body's health and functionality. 
-                                        It not only supports immediate physiological needs but also contributes to long-term health and well-being. 
+                                    <p>Good food is foundational to the body's health and functionality. 
+                                        It doesn't supports the immediate physiological needs only but also contributes to long-term health and well-being. 
                                         Eating a balanced diet rich in a variety of nutrients is essential for maintaining physical, 
                                         mental, and emotional health.</p>
                                 </div>
@@ -403,15 +402,16 @@
                 <section class="subscribe">
                     <div class="container flex items-center">
                         <div>
-                            <img src="./images/rasberry.png" alt="">
+                            <img src="./images/wine.png" alt="">
                         </div>
                         <div>
-                            <h1>Subscribe to your newsletter</h1>
-                            <p>Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
-                                web sites
-                                still in their infancy.</p>
+                            <h1>Subscribe to our newsletter</h1>
+                            <p>Get to know us better by subscribing to our newsletter, you don't want to miss any update 
+                                on what is happening at foodietech as well 
+                                as health benefits and happenings meant for your hears alone
+                                .</p>
                             <div class="input-wrap">
-                                <input type="email" placeholder="email@freshmeal.com">
+                                <input type="email" placeholder="email@foodietech@gmail.com">
                                 <button>Subscribe</button>
                             </div>
                         </div>
@@ -427,21 +427,21 @@
                                     <img src="./icons/phone-2.svg" alt="">
                                     <div>
                                         <span>Call us:</span>
-                                        <span>(+84) 123 456 789</span>
+                                        <span>(+234) 706 640 0040</span>
                                     </div>
                                 </div>
                                 <div>
                                     <img src="./icons/bag-2.svg" alt="">
                                     <div>
                                         <span>E-mail ::</span>
-                                        <span>support@freshmeal.com</span>
+                                        <span>support@foodietech.com</span>
                                     </div>
                                 </div>
                                 <div>
                                     <img src="./icons/clock-2.svg" alt="">
                                     <div>
                                         <span>Working Hours:</span>
-                                        <span>Mon - Sat (8.00am - 12.00am)</span>
+                                        <span>Mon - Sat (8.00am - 8.00pm)</span>
                                     </div>
                                 </div>
                             </div>
@@ -458,7 +458,9 @@
                     <div class="container">
                         <div class="box">
                             <h3>About us</h3>
-                            <p>It was popularised in the 1960 with the release of Latest sheets containing Lorem Ipsum
+                            <p> Foodietech, is a newly found found restaurant, Our head office is in Ikoyi, Lagos Nigeria. 
+                                The is a one man idea and business that started off early 2024,
+                                our review and feedback so far have been excellent.
                                 passage.</p>
                             <button class="btn btn-secondary">Read More</button>
                         </div>
