--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 as health benefits and happenings meant for your hears alone
                                 .</p>
                             <div class="input-wrap">
-                                <input type="email" placeholder="email@foodietech@gmail.com">
+                                <input type="email" placeholder="email:foodietech@gmail.com">
                                 <button>Subscribe</button>
                             </div>
                         </div>
@@ -529,13 +529,13 @@
                                     <img src="./images/food-table.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/food-table.jpg" alt="">
+                                    <img src="./images/wine 2.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/food-table.jpg" alt="">
+                                    <img src="./images/Spaghetti Meal.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/food-table.jpg" alt="">
+                                    <img src="./images/yogurt.jpg" alt="">
                                 </div>
                                 <div>
                                     <img src="./images/food-table.jpg" alt="">
