--- a/index.html
+++ b/index.html
@@ -535,13 +535,13 @@
                                     <img src="./images/Spaghetti Meal.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/yogurt.jpg" alt="">
+                                    <img src="./images/donut.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/food-table.jpg" alt="">
+                                    <img src="./images/Burger.jpg" alt="">
                                 </div>
                                 <div>
-                                    <img src="./images/food-table.jpg" alt="">
+                                    <img src="./images/plate-5.jpg" alt="">
                                 </div>
                             </div>
                         </div>
