--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <button class="btn btn-primary">Read More</button>
                             <button class="btn btn-secondary">Shop Now</button>
                         </div>
-                        <div class="hero-image">
+                        <div class="hero welcome.jpg">
                             <img src="./images/Chapman_drink.png" alt="">
                         </div>
                     </div>
@@ -349,7 +349,7 @@
 
                 <section class="latest-news">
                     <div class="container">
-                        <h1 class="section-heading">Lastest News from Blog</h1>
+                        <h1 class="section-heading">Lastest Blog News</h1>
                         <div class="article-wrapper">
                             <article class="card magic-shadow-sm">
                                 <div>
@@ -458,10 +458,10 @@
                     <div class="container">
                         <div class="box">
                             <h3>About us</h3>
-                            <p> Foodietech, is a newly found found restaurant, Our head office is in Ikoyi, Lagos Nigeria. 
+                            <p> Foodietech, is a newly founded restaurant, Our head office is in Ikoyi, Lagos Nigeria. 
                                 The is a one man idea and business that started off early 2024,
                                 our review and feedback so far have been excellent.
-                                passage.</p>
+                            </p>
                             <button class="btn btn-secondary">Read More</button>
                         </div>
                         <div class="box">
