--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <button class="btn btn-primary">Read More</button>
                             <button class="btn btn-secondary">Shop Now</button>
                         </div>
-                        <div class="hero welcome.jpg">
+                        <div class="hero-image">
                             <img src="./images/Chapman_drink.png" alt="">
                         </div>
                     </div>
