--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-wrapper">
         <div class="nav-background">
             <div class="mobile-logo">
-                <img src="./icons/logo.svg" alt="">
+                <img src="./icons/logo.png" alt="">
             </div>
             <div class="mobile-nav">
                 <div class="cart">
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                             <div class="branding">
-                               <img src="./icons/logo 1.png" alt="">
+                               <img src="./icons/logo.png" alt="">
                             </div>
                             <div class="time flex items-center">
                                 <img src="./icons/clock.svg" alt="">
@@ -549,7 +549,7 @@
                 </footer>
                 <footer class="copyright">
                     <div>
-                        Copyright © 2024 .All rights reserved by <a href="https://www.instagram.com/foodietech_restaurant/">Coder's Foodietech</a>.
+                        Copyright © 2024 .All rights reserved by <a href="https://www.instagram.com/foodietech_restaurant/">Coder's Foodietech(Bamzzzz)</a>.
                     </div>
                 </footer>
             </div>
