--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <button class="btn btn-secondary">Shop Now</button>
                         </div>
                         <div class="hero-image">
-                            <img src="./images/plate-2.png" alt="">
+                            <img src="./images/Chicken Burger.png" alt="">
                         </div>
                     </div>
                 </header>
