--- a/index.html
+++ b/index.html
@@ -460,7 +460,8 @@
                             <h3>About us</h3>
                             <p> Foodietech, is a newly founded restaurant, Our head office is in Ikoyi, Lagos Nigeria. 
                                 The is a one man idea and business that started off early 2024,
-                                our review and feedback so far have been excellent.
+                                our review and feedback so far have been excellent. 
+                                "this is a Portfolio Project for Holberton School"
                             </p>
                             <button class="btn btn-secondary">Read More</button>
                         </div>
