--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                 <img src="./images/logo 2.png" alt="">
                             </div>
                             <div class="flex-1">
-                                <h2>Freshmeal is a newly established food restaurant meant to satisfy the belly </h2>
+                                <h2>Foodietech is a newly established food restaurant meant to satisfy the belly </h2>
                                 <p>of those that love food while working. We are always available to deliver the food of
                                     your choice
                                     in respective of the distance. We have branches and enough staffs on guard to satisfy
