--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             <img src="./images/wine.png" alt="">
                         </div>
                         <div>
-                            <h1>Subscribe to our newsletter</h1>
+                            <h1>Subscribe to our newsletters</h1>
                             <p>Get to know us better by subscribing to our newsletter, you don't want to miss any update 
                                 on what is happening at foodietech as well 
                                 as health benefits and happenings meant for your hears alone
